CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(net_io CXX)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake-modules")
cmake_policy(SET CMP0015 NEW)

set(COMMON_MAJOR_VERSION 1)
set(COMMON_MINOR_VERSION 0)
set(COMMON_PATCH_VERSION 0)
set(COMMON_BUILD_NO 003)

MESSAGE("CMAKE_SYSTEM_VERSION: ${CMAKE_SYSTEM_VERSION}")
MESSAGE("CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE("CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE("CMAKE_LIBRARY_ARCHITECTURE: ${CMAKE_LIBRARY_ARCHITECTURE}")
MESSAGE("CMAKE_SYSTEM_VERSION: ${CMAKE_SYSTEM_VERSION}")
MESSAGE("CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE("CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE("CMAKE_LIBRARY_ARCHITECTURE: ${CMAKE_LIBRARY_ARCHITECTURE}")

IF (NOT CPU_COUNT)
    SET(CPU_COUNT 4)
ENDIF()

if (NOT SUBMOD_EXTERNAL_PREFIX)
    set(SUBMOD_EXTERNAL_PREFIX "${PROJECT_SOURCE_DIR}/.submodule/external")
endif()

if (NOT SUBMOD_INTERNAL_PREFIX)
    set(SUBMOD_INTERNAL_PREFIX "${PROJECT_SOURCE_DIR}/.submodule/internal")
endif()

IF (APPLE)
    SET(CMAKE_MACOSX_RPATH 1)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmacosx-version-min=10.9")
    #disable some warnings
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-register -Wno-unused-local-typedef -Wno-macro-redefined")
ENDIF()

IF (NOT WIN32)
    SET(CMAKE_CXX_FLAGS "-Wall -pthread -std=c++0x ${CMAKE_CXX_FLAGS}")
    SET(CMAKE_CXX_FLAGS_DEBUG "-D_DEBUG -g -fprofile-arcs -ftest-coverage")
    SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -fprofile-arcs -ftest-coverage")
ELSE()
    ADD_DEFINITIONS(-DWIN32_LEAN_AND_MEAN)
    SET(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MDD /ZI /OB0 /OD /RTC1")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
	SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /ZI")
    SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /INCREMENTAL:NO /DEBUG /OPT:REF /OPT:ICF")
    SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /INCREMENTAL:NO /DEBUG /OPT:REF /OPT:ICF")
ENDIF()

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREAD ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.55.0 COMPONENTS thread filesystem system program_options chrono iostreams locale)
find_package(Log4CXX)

if (Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
else()
   message(FATAL_ERROR "Boost devel package is not found on this machine.")
endif()

if (Log4CXX_FOUND)
   include_directories(${Log4CXX_INCLUDE_DIRS})
else()
   if (NOT WIN32 AND NOT APPLE)
   message(FATAL_ERROR "Log4CXX is not found on this machine.")
   else()
   message("log4cxx is not found.")
   endif()
endif()

set(CMAKE_VERBOSE_MAKEFILE ON)

SET(CPACK_PACKAGE_VERSION ${COMMON_MAJOR_VERSION}.${COMMON_MINOR_VERSION}.${COMMON_PATCH_VERSION}.${COMMON_BUILD_NO})
SET(CPACK_PACKAGE_VERSION_MAJOR ${COMMON_MAJOR_VERSION})
SET(CPACK_PACKAGE_VERSION_MINOR ${COMMON_MINOR_VERSION})
SET(CPACK_PACKAGE_VERSION_PATCH ${COMMON_PATCH_VERSION})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${SUBMOD_EXTERNAL_PREFIX}/include)
INCLUDE_DIRECTORIES(${SUBMOD_INTERNAL_PREFIX}/include)

SET(SUBMOD_THIRDPARTY_LIB_PATH ${SUBMOD_EXTERNAL_PREFIX}/lib)
SET(SUBMOD_INTERNAL_LIB_PATH ${SUBMOD_INTERNAL_PREFIX}/lib)
LINK_DIRECTORIES(net_io ${SUBMOD_THIRDPARTY_LIB_PATH})
LINK_DIRECTORIES(net_io ${SUBMOD_INTERNAL_LIB_PATH})

SET(CMAKE_VERBOSE_MAKEFILE ON)

ADD_SUBDIRECTORY(src)
